src/objects/LeanData__LD_Partner_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__LD_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>LeanData__LD_Partner__c</referenceTo>
        <relationshipLabel>LD Partner Metadata</relationshipLabel>
        <relationshipName>LD_Partner_Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Partner_Name__c</fullName>
        <formula>LeanData__LD_Partner__r.Name</formula>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Value_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>LD Partner Metadata</label>
    <listViews>
        <fullName>LeanData__All</fullName>
        <columns>LeanData__LD_Partner__c</columns>
        <columns>LeanData__Label__c</columns>
        <columns>LeanData__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LDPM-{000000000}</displayFormat>
        <label>LD Partner Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LD Partner Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>